welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: type mismatch;
 found   : Int
 required: Nothing
      T(m) = k 
             ^